Removed dependency on 'org.apache.commons.lang'
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>